# neural-network-library

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NN.sublime-project  matrix.cpp  matrix.h  neural_network_c++.sln  readme.md
.github/workflows/: c-cpp.yml  cmake.yml
enc_temp_folder/6d95ab965e6fbecda7358564bfc618/: matrix.cpp
include/: LettersDataset.h  Net.h  Network.h  net.h
lib/Matrix/: Matrix.cc  Matrix.h
neural_network_c++/: array_2d.h  matrix.cpp  matrix.h  net.cpp  net.h  neural_network_c++.cpp  neural_network_c++.vcxproj  neural_network_c++.vcxproj.filters
src/: Net.cpp  Network.cpp  array_2d.cpp  main.cpp  matrix.cpp  neural_network_c++.cpp
tests/: TestMatrix.cc  TestsMain.cc
